--- a/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
+++ b/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MovieAdvisor.BulkDataLoader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+    <applicationSettings>
+        <MovieAdvisor.BulkDataLoader.Properties.Settings>
+            <setting name="MoviesDataPath" serializeAs="String">
+                <value>...\...\...\RawDataSets\MovieLens\ml-1m\ml-1m\movies.dat</value>
+            </setting>
+            <setting name="UsersDataPath" serializeAs="String">
+                <value>...\...\...\RawDataSets\MovieLens\ml-1m\ml-1m\users.dat</value>
+            </setting>
+            <setting name="RatingsDataPath" serializeAs="String">
+                <value>...\...\...\RawDataSets\MovieLens\ml-1m\ml-1m\ratings.dat</value>
+            </setting>
+        </MovieAdvisor.BulkDataLoader.Properties.Settings>
+    </applicationSettings>
 </configuration>
