--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
-MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader.Tests/bin/
-MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader.Tests/obj/
-MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/bin/
-MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/obj/
-MovieAdvisor/Core/Entities/MovieAdvisor.Core.Business.Entities/bin/
-MovieAdvisor/Core/Entities/MovieAdvisor.Core.Business.Entities/obj/
-MovieAdvisor/Core/Entities/MovieAdvisor.Core.DataAccess.Entities/bin/
-MovieAdvisor/Core/Entities/MovieAdvisor.Core.DataAccess.Entities/obj/
-MovieAdvisor/Core/Interfaces/MovieAdvisor.Core.Business.Interfaces/obj/
-MovieAdvisor/Core/Interfaces/MovieAdvisor.Core.Business.Interfaces/bin/
-RawDataSets/MovieLens/ml-100k/
-RawDataSets/MovieLens/ml-10m/
-RawDataSets/MovieLens/ml-1m/
-MovieAdvisor/MovieAdvisor.sln.DotSettings.user
+# User-specific files
+*.user
 *.suo
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+x64/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
+
+RawDataSets/MovieLens/ml-1m
+RawDataSets/MovieLens/ml-10m
+RawDataSets/MovieLens/ml-100k
