BulkDataLoader console app draft implemented.
-- console app draft implemented;
-- Core.DataAccess project added;
-- Core.DataAccess: BulkDataLoader-related interfaces added; mock implementations added.

--- a/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
+++ b/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
@@ -11,13 +11,13 @@
     <applicationSettings>
         <MovieAdvisor.BulkDataLoader.Properties.Settings>
             <setting name="MoviesDataPath" serializeAs="String">
-                <value>...\...\...\RawDataSets\MovieLens\ml-1m\ml-1m\movies.dat</value>
+                <value>..\..\..\..\..\RawDataSets\MovieLens\ml-1m\ml-1m\movies.dat</value>
             </setting>
             <setting name="UsersDataPath" serializeAs="String">
-                <value>...\...\...\RawDataSets\MovieLens\ml-1m\ml-1m\users.dat</value>
+                <value>..\..\..\..\..\RawDataSets\MovieLens\ml-1m\ml-1m\users.dat</value>
             </setting>
             <setting name="RatingsDataPath" serializeAs="String">
-                <value>...\...\...\RawDataSets\MovieLens\ml-1m\ml-1m\ratings.dat</value>
+                <value>..\..\..\..\..\RawDataSets\MovieLens\ml-1m\ml-1m\ratings.dat</value>
             </setting>
         </MovieAdvisor.BulkDataLoader.Properties.Settings>
     </applicationSettings>
