--- a/MovieAdvisor/Core/Server/MovieAdvisor.Core.DataAccess/MovieAdvisor.Core.DataAccess.csproj
+++ b/MovieAdvisor/Core/Server/MovieAdvisor.Core.DataAccess/MovieAdvisor.Core.DataAccess.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{15A796C8-C6B5-421A-A0AF-FC2CD94E3B13}</ProjectGuid>
+    <ProjectGuid>{56588572-549B-456B-903B-97B5E9F050C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MovieAdvisor.Core.Business.Interfaces</RootNamespace>
-    <AssemblyName>MovieAdvisor.Business.Interfaces</AssemblyName>
+    <RootNamespace>MovieAdvisor.Core.DataAccess</RootNamespace>
+    <AssemblyName>MovieAdvisor.Core.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,10 +35,21 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Facades\IMovieAdvisorFacade.cs" />
+    <Compile Include="MovieDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatingRecordDataManager.cs" />
+    <Compile Include="UserDataManager.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Entities\MovieAdvisor.Core.DataAccess.Entities\MovieAdvisor.Core.DataAccess.Entities.csproj">
+      <Project>{d0fa1f8c-7842-46d2-9f9f-03b00c75c9fd}</Project>
+      <Name>MovieAdvisor.Core.DataAccess.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Interfaces\MovieAdvisor.Core.DataAccess.Interfaces\MovieAdvisor.Core.DataAccess.Interfaces.csproj">
+      <Project>{5e351166-5ed5-41e6-9292-ab61030cf086}</Project>
+      <Name>MovieAdvisor.Core.DataAccess.Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
