--- a/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
+++ b/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
@@ -19,6 +19,15 @@
             <setting name="RatingsDataPath" serializeAs="String">
                 <value>..\..\..\..\..\RawDataSets\MovieLens\ml-1m\ml-1m\ratings.dat</value>
             </setting>
+            <setting name="AreMoviesLoaded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AreUsersLoaded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AreRatingRecordsLoaded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MovieAdvisor.BulkDataLoader.Properties.Settings>
     </applicationSettings>
 </configuration>
