--- a/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/MovieAdvisor.BulkDataLoader.csproj
+++ b/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/MovieAdvisor.BulkDataLoader.csproj
@@ -44,9 +44,12 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Exceptions\EntityParserException.cs" />
+    <Compile Include="Core\Entities\Exceptions\EntityParserException.cs" />
+    <Compile Include="Core\Interfaces\IEntityParser.cs" />
     <Compile Include="Core\Server\EntityParsers\MovieParser.cs" />
     <Compile Include="Core\Server\EntityParsers\RatingRecordParser.cs" />
     <Compile Include="Core\Server\EntityParsers\UserParser.cs" />
@@ -58,6 +61,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="UnityConfiguration\AppSpecific\LoaderBaseRegistry.cs" />
+    <Compile Include="UnityConfiguration\CompositeRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -85,6 +90,7 @@
       <Name>MovieAdvisor.Core.DataAccess.UnityConfiguration</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
