BulkDataLoader performance improved.
-- nodes loading boosted in 7000 times;
-- relations loading boosted in 1.5 times.

--- a/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
+++ b/MovieAdvisor/BulkDataLoader/MovieAdvisor.BulkDataLoader/App.config
@@ -20,13 +20,13 @@
                 <value>..\..\..\..\..\RawDataSets\MovieLens\ml-1m\ml-1m\ratings.dat</value>
             </setting>
             <setting name="AreMoviesLoaded" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="AreUsersLoaded" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="AreRatingRecordsLoaded" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </MovieAdvisor.BulkDataLoader.Properties.Settings>
     </applicationSettings>
