--- a/MovieAdvisor/UnityConfiguration/MovieAdvisor.BulkDataLoader.DataAccess.Unity/MovieAdvisor.BulkDataLoader.DataAccess.Unity.csproj
+++ b/MovieAdvisor/UnityConfiguration/MovieAdvisor.BulkDataLoader.DataAccess.Unity/MovieAdvisor.BulkDataLoader.DataAccess.Unity.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{43E633F8-32CC-4194-B478-EF42366FB198}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{3D4A84E8-7841-481C-BF74-42228585E133}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MovieAdvisor.BulkDataLoader</RootNamespace>
-    <AssemblyName>MovieAdvisor.BulkDataLoader</AssemblyName>
+    <RootNamespace>MovieAdvisor.BulkDataLoader.DataAccess.Unity</RootNamespace>
+    <AssemblyName>MovieAdvisor.BulkDataLoader.DataAccess.Unity</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,10 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,57 +37,51 @@
     <Reference Include="Microsoft.Practices.Unity.Configuration">
       <HintPath>..\..\packages\Unity.3.0.1304.1\lib\Net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="Neo4jClient">
+      <HintPath>..\..\packages\Neo4jClient.1.0.0.645\lib\net40\Neo4jClient.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.18\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.18\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Entities\Exceptions\EntityParserException.cs" />
-    <Compile Include="Core\Interfaces\IEntityParser.cs" />
-    <Compile Include="Core\Server\EntityParsers\MovieParser.cs" />
-    <Compile Include="Core\Server\EntityParsers\RatingRecordParser.cs" />
-    <Compile Include="Core\Server\EntityParsers\UserParser.cs" />
-    <Compile Include="Core\Server\Loader.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="DataAccessBaseUnityRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-    <Compile Include="UnityConfiguration\AppSpecific\LoaderBaseRegistry.cs" />
-    <Compile Include="UnityConfiguration\CompositeRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\Entities\MovieAdvisor.Core.DataAccess.Entities\MovieAdvisor.Core.DataAccess.Entities.csproj">
-      <Project>{d0fa1f8c-7842-46d2-9f9f-03b00c75c9fd}</Project>
-      <Name>MovieAdvisor.Core.DataAccess.Entities</Name>
+    <ProjectReference Include="..\..\BulkDataLoader\MovieAdvisor.BulkDataLoader.DataAccess\MovieAdvisor.BulkDataLoader.DataAccess.csproj">
+      <Project>{30b10326-0850-495e-b856-1449a2c413e1}</Project>
+      <Name>MovieAdvisor.BulkDataLoader.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Core\Server\MovieAdvisor.Core.DataAccess\MovieAdvisor.Core.DataAccess.csproj">
+      <Project>{56588572-549b-456b-903b-97b5e9f050c3}</Project>
+      <Name>MovieAdvisor.Core.DataAccess</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\MovieAdvisor.Shared\MovieAdvisor.Shared.csproj">
       <Project>{3f9e1675-ab70-4306-bdc8-16cc52668631}</Project>
       <Name>MovieAdvisor.Shared</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\UnityConfiguration\MovieAdvisor.BulkDataLoader.DataAccess.Unity\MovieAdvisor.BulkDataLoader.DataAccess.Unity.csproj">
-      <Project>{3d4a84e8-7841-481c-bf74-42228585e133}</Project>
-      <Name>MovieAdvisor.BulkDataLoader.DataAccess.Unity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MovieAdvisor.BulkDataLoader.DataAccess\MovieAdvisor.BulkDataLoader.DataAccess.csproj">
-      <Project>{30b10326-0850-495e-b856-1449a2c413e1}</Project>
-      <Name>MovieAdvisor.BulkDataLoader.DataAccess</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" />
+  <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
+    <Error Condition="!Exists('..\..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
+    <Error Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
