--- a/MovieAdvisor/packages/repositories.config
+++ b/MovieAdvisor/packages/repositories.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BulkDataLoader\MovieAdvisor.BulkDataLoader.DataAccess\packages.config" />
   <repository path="..\BulkDataLoader\MovieAdvisor.BulkDataLoader.Tests\packages.config" />
   <repository path="..\BulkDataLoader\MovieAdvisor.BulkDataLoader\packages.config" />
   <repository path="..\Core\Server\MovieAdvisor.Core.DataAccess\packages.config" />
   <repository path="..\Shared\MovieAdvisor.Shared\packages.config" />
+  <repository path="..\UnityConfiguration\MovieAdvisor.BulkDataLoader.DataAccess.Unity\packages.config" />
+  <repository path="..\UnityConfiguration\MovieAdvisor.Core.DataAccess.Unity\packages.config" />
   <repository path="..\UnityConfiguration\MovieAdvisor.Core.DataAccess.UnityConfiguration\packages.config" />
 </repositories>
