--- a/MovieAdvisor/MovieAdvisor.Business.Entities.Core/MovieAdvisor.Business.Entities.Core.csproj
+++ b/MovieAdvisor/MovieAdvisor.Business.Entities.Core/MovieAdvisor.Business.Entities.Core.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Movie.cs" />
     <Compile Include="MovieGenreFlagsEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RatingPrediction\MoviesSimilarity.cs" />
     <Compile Include="RatingRecord.cs" />
     <Compile Include="RatingValueEnum.cs" />
     <Compile Include="User.cs" />
