--- a/MovieAdvisor/MovieAdvisor.Business.Services.Core/MovieAdvisor.Business.Services.Core.csproj
+++ b/MovieAdvisor/MovieAdvisor.Business.Services.Core/MovieAdvisor.Business.Services.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E351166-5ED5-41E6-9292-AB61030CF086}</ProjectGuid>
+    <ProjectGuid>{8AB32351-B5F1-4D5B-B231-EADE1D2F1936}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MovieAdvisor.DataAccess.Interfaces.Core</RootNamespace>
-    <AssemblyName>MovieAdvisor.DataAccess.Interfaces.Core</AssemblyName>
+    <RootNamespace>MovieAdvisor.Business.Services.Core</RootNamespace>
+    <AssemblyName>MovieAdvisor.Business.Services.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,24 +33,30 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Facades\IMovieAdvisorDataFacade.cs" />
-    <Compile Include="IMovieDataManager.cs" />
-    <Compile Include="IMovieSimilarityDataService.cs" />
-    <Compile Include="IRatingRecordDataManager.cs" />
-    <Compile Include="IUserDataManager.cs" />
+    <Compile Include="IICF\CsMovieSimilarityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IICF\RatingPredictionService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MovieAdvisor.Business.Entities.Core\MovieAdvisor.Business.Entities.Core.csproj">
+      <Project>{d620a0df-a793-4f04-a2f5-5946ad19a808}</Project>
+      <Name>MovieAdvisor.Business.Entities.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MovieAdvisor.Business.Interfaces.Core\MovieAdvisor.Business.Interfaces.Core.csproj">
+      <Project>{15a796c8-c6b5-421a-a0af-fc2cd94e3b13}</Project>
+      <Name>MovieAdvisor.Business.Interfaces.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MovieAdvisor.DataAccess.Entities.Core\MovieAdvisor.DataAccess.Entities.Core.csproj">
       <Project>{D0FA1F8C-7842-46D2-9F9F-03B00C75C9FD}</Project>
       <Name>MovieAdvisor.DataAccess.Entities.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MovieAdvisor.DataAccess.Interfaces.Core\MovieAdvisor.DataAccess.Interfaces.Core.csproj">
+      <Project>{5E351166-5ED5-41E6-9292-AB61030CF086}</Project>
+      <Name>MovieAdvisor.DataAccess.Interfaces.Core</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
