--- a/MovieAdvisor/packages/repositories.config
+++ b/MovieAdvisor/packages/repositories.config
@@ -4,7 +4,9 @@
   <repository path="..\MovieAdvisor.BulkDataLoader.DataAccess\packages.config" />
   <repository path="..\MovieAdvisor.BulkDataLoader.Tests\packages.config" />
   <repository path="..\MovieAdvisor.BulkDataLoader\packages.config" />
+  <repository path="..\MovieAdvisor.Business.Unity.Core\packages.config" />
   <repository path="..\MovieAdvisor.Common\packages.config" />
   <repository path="..\MovieAdvisor.DataAccess.Services.Core\packages.config" />
   <repository path="..\MovieAdvisor.DataAccess.Unity.Core\packages.config" />
+  <repository path="..\TestApp\packages.config" />
 </repositories>
